--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "builds": [
     {
-      "src": "src/index.js",
-      "use": "@vercel/node"
+      "src": "./src/index.js",
+      "use": "@now/node"
     }
   ],
   "routes": [
