--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "./src/index.js",
-      "use": "@now/node"
+      "src": "./index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
