--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "./src/index",
+      "src": "./src/index.js",
       "use": "@vercel/node"
     }
   ],
