--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,4 +1,4 @@
-name: HomeWorks CI
+name: HomeWorks CI Pipeline
 
 on: [push, pull_request]
 
@@ -18,4 +18,3 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm i
       - run: npm test
-
