--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.0",
+    "nodemailer": "^6.7.5",
     "uuid": "^8.3.2"
   }
 }
