--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.4.0",
     "nodemailer": "^6.7.5",
     "uuid": "^8.3.2"
