--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.18"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
