--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.29.3",
     "mongoose": "^6.4.0",
     "nodemailer": "^6.7.5",
+    "random-number": "^0.0.9",
     "uuid": "^8.3.2"
   }
 }
